--- a/web-files-HUSH/index.html
+++ b/web-files-HUSH/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HUSH Headphones</title>
-</head>
-<body>
-    <header></header>
+  </head>
+  <body>
+    <header>
+      <img id="headphonePic" class="" alt="HUSH logo" src="http://www.fillmurray.com/200/200" />
+      <h1>Hip Unique Silent Headphones</h1>
+    </header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
