--- a/web-files-HUSH/index.html
+++ b/web-files-HUSH/index.html
@@ -4,14 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');
+    </style>
     <title>HUSH Headphones</title>
   </head>
   <body>
     <header>
       <img id="headphonePic" class="" alt="HUSH logo" src="http://www.fillmurray.com/200/200" />
-      <h1>Hip Unique Silent Headphones</h1>
     </header>
-    <main></main>
+    <main>
+        <div>
+            <h1>Hip Unique Silent Headphones</h1>
+        </div>
+        <div>
+            <p>
+                Elevator pitch here. Lorem ipsum dolor sit amet, 
+                consetetur sadipscing elitr, sed diam nonumy eirmod 
+                tempor invidunt ut labore et dolore magna aliquyam 
+                erat, sed diam voluptua. At vero eos et accusam et 
+                justo duo dolores et ea rebum.
+            </p>
+        </div>
+        <div>
+            <h2>How do they work?</h2>
+            <p>
+                Once initial set-up is finished, simply connect 
+                your audio source(s) to the transmitter and 
+                turn on the headphones! You can transmit up to 
+                three different audio sources across three color 
+                coded channels!
+            </p>
+        </div>
+        <div>
+            <h2>What can they be used for?</h2>
+            <ul>
+                <li>
+                    🎉 Parties - Enjoy the most fun you will ever 
+                    have without all the noise! Talk and catch up 
+                    without having to yell over the music!
+                </li>
+                <li>
+                    👰 Weddings - Set a color for the bride and a 
+                    color for the groom!
+                </li>
+                <li>
+                    🧘 Yoga/Fitness - Let your clients decide what 
+                    music or workout program they want.
+                </li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+        <div>
+            <h1>Reserve Now!</h1>
+            <form>
+                <label class="d-none" class="d-none" for="fullName" >Full Name:</label>
+                <input id="fullName" name="fullName" type="text" placeholder="Full Name" required />
+                <label class="d-none" for="phone">Phone:</label>
+                <input id="phone" name="phone" type="tel" placeholder="(555) 555-5555" required />
+                <label class="d-none" for="email">E-Mail:</label>
+                <input id="email" name="email" type="email" placeholder="janeSmith@email.com" required />
+                <label class="d-none" for="reservationDate">Reservation Date:</label>
+                <input id="reservationDate" name="reservationDate" type="date" placeholder="MM/DD/YYYY" required />
+                <label class="d-none" for="message">Message:</label>
+                <textarea name="message" id="message" cols="30" rows="7" placeholder="Questions? Notes?"></textarea>
+                <button type="submit">S E N D</button>
+            </form>
+        </div>
+    </main>
     <footer></footer>
   </body>
 </html>
