Added dark button iphone view only

--- a/web-files-HUSH/index.html
+++ b/web-files-HUSH/index.html
@@ -10,10 +10,19 @@
     </style>
     <title>HUSH Headphones</title>
   </head>
-  <body>
+  <body>    
       <div class="sideBuffer">
           <header class="basicGrid center">
             <img id="headphonePic" class="" alt="HUSH logo" src="http://www.fillmurray.com/200/200" />
+            <svg id="toggleDark" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
+              <g id="Group_4" data-name="Group 4" transform="translate(-342 -29)">
+                <g id="Ellipse_1" data-name="Ellipse 1" transform="translate(342 29)" fill="#fff" stroke="#7f3c7a" stroke-width="2">
+                  <circle cx="20" cy="20" r="20" stroke="none"/>
+                  <circle cx="20" cy="20" r="19" fill="none"/>
+                </g>
+                <path id="Icon_ionic-ios-moon" data-name="Icon ionic-ios-moon" d="M19.2,16.752c-.122,0-.245.008-.367.008a7.444,7.444,0,0,1-5.354-2.255,7.693,7.693,0,0,1-2.217-5.439A7.79,7.79,0,0,1,12,5.744a11.006,11.006,0,0,1,.574-.988.166.166,0,0,0-.165-.258,8.167,8.167,0,0,0,1.246,16.215,7.961,7.961,0,0,0,6.119-2.876,7.713,7.713,0,0,0,.693-.921.17.17,0,0,0-.173-.258A7.211,7.211,0,0,1,19.2,16.752Z" transform="translate(348.943 36.396)" fill="#7f3c7a"/>
+              </g>
+            </svg>
           </header>
           <main class="basicGrid center">
               <h1>Hip Unique Silent Headphones</h1>
