--- a/web-files-HUSH/index.html
+++ b/web-files-HUSH/index.html
@@ -4,99 +4,166 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap");
     </style>
     <title>HUSH Headphones</title>
   </head>
   <body class="">
-      <div class="sideBuffer">
-          <header class="basicGrid center">
-            <img id="lightLogo" class="" alt="HUSH logo" src="./imgs/blk-logo.png" />
-            <img id="darkLogo" class="d-none" alt="HUSH logo" src="./imgs/wht-logo.png" />
-            <svg id="moonToggle" class="themeToggle" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-              <g id="Group_4" data-name="Group 4" transform="translate(-342 -29)">
-                <g id="Ellipse_1" data-name="Ellipse 1" transform="translate(342 29)" fill="#fff" stroke="#7f3c7a" stroke-width="2">
-                  <circle cx="20" cy="20" r="20" stroke="none"/>
-                  <circle cx="20" cy="20" r="19" fill="none"/>
-                </g>
-                <path id="Icon_ionic-ios-moon" data-name="Icon ionic-ios-moon" d="M19.2,16.752c-.122,0-.245.008-.367.008a7.444,7.444,0,0,1-5.354-2.255,7.693,7.693,0,0,1-2.217-5.439A7.79,7.79,0,0,1,12,5.744a11.006,11.006,0,0,1,.574-.988.166.166,0,0,0-.165-.258,8.167,8.167,0,0,0,1.246,16.215,7.961,7.961,0,0,0,6.119-2.876,7.713,7.713,0,0,0,.693-.921.17.17,0,0,0-.173-.258A7.211,7.211,0,0,1,19.2,16.752Z" transform="translate(348.943 36.396)" fill="#7f3c7a"/>
-              </g>
-            </svg>
-            <svg id="sunToggle" class="themeToggle d-none" xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
-                <g id="Group_2" data-name="Group 2" transform="translate(-342 -27)">
-                  <g id="Ellipse_2" data-name="Ellipse 2" transform="translate(342 27)" fill="#7f3c7a" stroke="#7f3c7a" stroke-width="1">
-                    <circle cx="20" cy="20" r="20" stroke="none"/>
-                    <circle cx="20" cy="20" r="19.5" fill="none"/>
-                  </g>
-                  <path id="Icon_awesome-sun" data-name="Icon awesome-sun" d="M10.679,6.674a4,4,0,1,0,4,4A4.011,4.011,0,0,0,10.679,6.674Zm10.278,3.358-3.95-1.973,1.4-4.188a.721.721,0,0,0-.914-.914L13.3,4.355,11.325.4a.722.722,0,0,0-1.293,0L8.059,4.351l-4.192-1.4a.721.721,0,0,0-.914.914l1.4,4.188L.4,10.032a.722.722,0,0,0,0,1.293L4.351,13.3l-1.4,4.192a.721.721,0,0,0,.914.914l4.188-1.4,1.973,3.95a.722.722,0,0,0,1.293,0l1.973-3.95,4.188,1.4a.721.721,0,0,0,.914-.914L17,13.3l3.95-1.973a.723.723,0,0,0,.008-1.3Zm-6.5,4.422a5.339,5.339,0,1,1,0-7.55A5.345,5.345,0,0,1,14.454,14.454Z" transform="translate(351.322 36.321)" fill="#212121"/>
-                </g>
-              </svg>
-          </header>
-          <main class="basicGrid center">
-              <h1>Hip Unique Silent Headphones</h1>
-              <p class="card emphasis">
-                  Elevator pitch here. Lorem ipsum dolor sit amet, 
-                  consetetur sadipscing elitr, sed diam nonumy eirmod 
-                  tempor invidunt ut labore et dolore magna aliquyam 
-                  erat, sed diam voluptua. At vero eos et accusam et 
-                  justo duo dolores et ea rebum.
-              </p>
-              <h3 class="">How do they work?</h3>
-              <p class="card">
-                  Once initial set-up is finished, simply connect 
-                  your audio source(s) to the transmitter and
-                  turn on the headphones! You can transmit up to
-                  three different audio sources across three color 
-                  coded channels!
-              </p>
-              <h3 class="">What can they be used for?</h3>
-              <ul class="card">
-                  <li>
-                      🎉 Parties - Enjoy the most fun you will ever 
-                      have without all the noise! Talk and catch up 
-                      without having to yell over the music!
-                  </li>
-                  <li>
-                      👰 Weddings - Set a color for the bride and a 
-                      color for the groom!
-                  </li>
-                  <li>
-                      🧘 Yoga/Fitness - Let your clients decide what 
-                      music or workout program they want.
-                  </li>
-                  <li>
-                      🎉 Parties - Enjoy the most fun you will ever 
-                      have without all the noise! Talk and catch up 
-                      without having to yell over the music!
-                  </li>
-                  <li>
-                      👰 Weddings - Set a color for the bride and a 
-                      color for the groom!
-                  </li>
-              </ul>
-              <h1 id="reserve">Reserve Now!</h1>
-              <form class=" center">
-                  <label class="d-none" class="d-none" for="fullName" >Full Name:</label>
-                  <input id="fullName" name="fullName" type="text" placeholder="Full Name" required />
-                  <label class="d-none" for="phone">Phone:</label>
-                  <input id="phone" name="phone" type="tel" placeholder="(555) 555-5555" required />
-                  <label class="d-none" for="email">E-Mail:</label>
-                  <input id="email" name="email" type="email" placeholder="janeSmith@email.com" required />
-                  <label class="d-none" for="reservationDate">Reservation Date:</label>
-                  <input id="reservationDate" name="reservationDate" type="date" />
-                  <label class="d-none" for="message">Message:</label>
-                  <textarea name="message" id="message" cols="16" rows="3" placeholder="Questions? Notes?"></textarea>
-                  <button type="submit">SEND</button>
-              </form>
-          </main>
-      </div>
+    <div class="sideBuffer">
+      <header class="basicGrid center">
+        <img
+          id="lightLogo"
+          class=""
+          alt="HUSH logo"
+          src="./imgs/blk-logo.png"
+        />
+        <img
+          id="darkLogo"
+          class="d-none"
+          alt="HUSH logo"
+          src="./imgs/wht-logo.png"
+        />
+        <svg
+          id="moonToggle"
+          class="themeToggle"
+          xmlns="http://www.w3.org/2000/svg"
+          width="40"
+          height="40"
+          viewBox="0 0 40 40"
+        >
+          <g id="Group_4" data-name="Group 4" transform="translate(-342 -29)">
+            <g
+              id="Ellipse_1"
+              data-name="Ellipse 1"
+              transform="translate(342 29)"
+              fill="#fff"
+              stroke="#7f3c7a"
+              stroke-width="2"
+            >
+              <circle cx="20" cy="20" r="20" stroke="none" />
+              <circle cx="20" cy="20" r="19" fill="none" />
+            </g>
+            <path
+              id="Icon_ionic-ios-moon"
+              data-name="Icon ionic-ios-moon"
+              d="M19.2,16.752c-.122,0-.245.008-.367.008a7.444,7.444,0,0,1-5.354-2.255,7.693,7.693,0,0,1-2.217-5.439A7.79,7.79,0,0,1,12,5.744a11.006,11.006,0,0,1,.574-.988.166.166,0,0,0-.165-.258,8.167,8.167,0,0,0,1.246,16.215,7.961,7.961,0,0,0,6.119-2.876,7.713,7.713,0,0,0,.693-.921.17.17,0,0,0-.173-.258A7.211,7.211,0,0,1,19.2,16.752Z"
+              transform="translate(348.943 36.396)"
+              fill="#7f3c7a"
+            />
+          </g>
+        </svg>
+        <svg
+          id="sunToggle"
+          class="themeToggle d-none"
+          xmlns="http://www.w3.org/2000/svg"
+          width="40"
+          height="40"
+          viewBox="0 0 40 40"
+        >
+          <g id="Group_2" data-name="Group 2" transform="translate(-342 -27)">
+            <g
+              id="Ellipse_2"
+              data-name="Ellipse 2"
+              transform="translate(342 27)"
+              fill="#7f3c7a"
+              stroke="#7f3c7a"
+              stroke-width="1"
+            >
+              <circle cx="20" cy="20" r="20" stroke="none" />
+              <circle cx="20" cy="20" r="19.5" fill="none" />
+            </g>
+            <path
+              id="Icon_awesome-sun"
+              data-name="Icon awesome-sun"
+              d="M10.679,6.674a4,4,0,1,0,4,4A4.011,4.011,0,0,0,10.679,6.674Zm10.278,3.358-3.95-1.973,1.4-4.188a.721.721,0,0,0-.914-.914L13.3,4.355,11.325.4a.722.722,0,0,0-1.293,0L8.059,4.351l-4.192-1.4a.721.721,0,0,0-.914.914l1.4,4.188L.4,10.032a.722.722,0,0,0,0,1.293L4.351,13.3l-1.4,4.192a.721.721,0,0,0,.914.914l4.188-1.4,1.973,3.95a.722.722,0,0,0,1.293,0l1.973-3.95,4.188,1.4a.721.721,0,0,0,.914-.914L17,13.3l3.95-1.973a.723.723,0,0,0,.008-1.3Zm-6.5,4.422a5.339,5.339,0,1,1,0-7.55A5.345,5.345,0,0,1,14.454,14.454Z"
+              transform="translate(351.322 36.321)"
+              fill="#212121"
+            />
+          </g>
+        </svg>
+      </header>
+      <main class="basicGrid center">
+        <h1>Hip Unique Silent Headphones</h1>
+        <p class="card emphasis">
+          Elevator pitch here. Lorem ipsum dolor sit amet, consetetur sadipscing
+          elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+          magna aliquyam erat, sed diam voluptua. At vero eos et accusam et
+          justo duo dolores et ea rebum.
+        </p>
+        <h3 class="">How do they work?</h3>
+        <p class="card">
+          Once initial set-up is finished, simply connect your audio source(s)
+          to the transmitter and turn on the headphones! You can transmit up to
+          three different audio sources across three color coded channels!
+        </p>
+        <h3 class="">What can they be used for?</h3>
+        <ul class="card">
+          <li>
+            🎉 Parties - Enjoy the most fun you will ever have without all the
+            noise! Talk and catch up without having to yell over the music!
+          </li>
+          <li>
+            👰 Weddings - Set a color for the bride and a color for the groom!
+          </li>
+          <li>
+            🧘 Yoga/Fitness - Let your clients decide what music or workout
+            program they want.
+          </li>
+          <li>
+            🎉 Parties - Enjoy the most fun you will ever have without all the
+            noise! Talk and catch up without having to yell over the music!
+          </li>
+          <li>
+            👰 Weddings - Set a color for the bride and a color for the groom!
+          </li>
+        </ul>
+        <h1 id="reserve">Reserve Now!</h1>
+        <form class="center">
+          <label class="d-none" for="fullName">Full Name:</label>
+          <input
+            id="fullName"
+            name="fullName"
+            type="text"
+            placeholder="Full Name"
+            required
+          />
+          <label class="d-none" for="phone">Phone:</label>
+          <input
+            id="phone"
+            name="phone"
+            type="tel"
+            placeholder="(555) 555-5555"
+            required
+          />
+          <label class="d-none" for="email">E-Mail:</label>
+          <input
+            id="email"
+            name="email"
+            type="email"
+            placeholder="janeSmith@email.com"
+            required
+          />
+          <label class="d-none" for="reservationDate">Reservation Date:</label>
+          <input id="reservationDate" name="reservationDate" type="date" placeholder="mm/dd/yyyy" />
+          <label class="d-none" for="message">Message:</label>
+          <textarea
+            name="message"
+            id="message"
+            cols="16"
+            rows="3"
+            placeholder="Questions? Notes?"
+          ></textarea>
+          <button type="submit">SEND</button>
+        </form>
+      </main>
+    </div>
     <footer class="basicGrid center">
-        <p>HUSH - Hip Unique Silent Headphones</p>
-        <p>--</p>
-        <p>Studio 420/Seven J. Properties</p>
+      <p>HUSH - Hip Unique Silent Headphones</p>
+      <p>--</p>
+      <p>Studio 420/Seven J. Properties</p>
     </footer>
-    <script src="./index.js" type="text/javascript"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
