Placeholder isn't allowed on date inputs evidently
So I removed it.

--- a/web-files-HUSH/index.html
+++ b/web-files-HUSH/index.html
@@ -146,7 +146,7 @@
             required
           />
           <label class="d-none" for="reservationDate">Reservation Date:</label>
-          <input id="reservationDate" name="reservationDate" type="date" placeholder="mm/dd/yyyy" />
+          <input id="reservationDate" name="reservationDate" type="date" />
           <label class="d-none" for="message">Message:</label>
           <textarea
             name="message"
